Fix an alignment issue in the tables

--- a/static/css/abyssal.css
+++ b/static/css/abyssal.css
@@ -63,3 +63,7 @@
 html {
     overflow-y:scroll;
 }
+
+.module-table>tbody>tr>td {
+    vertical-align: middle;
+}
